--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>HOMETOWNHEROES</title>
+    <title>INDIE-GROOVES</title>
 
     <style>
       #loader {
